--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,6 +8,28 @@
 
   </head>
   <body>
+    <%# facebook login - instructed to add to each page required%>
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) return;
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8&appId=616487815227069";
+     fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+
+    <nav>
+      <ul>
+        <li><a href="/login">Login</a></li>
+        <p>login goes to views/session/new</p>
+        <li><a href="/user">Profile</a></li>
+        <p>login goes to views/session/new</p>
+
+        <li><a href="/events/new">add new event</a></li>
+        <p>  goes to events/new</p>
+
+      </ul>
+    </nav>
     <% for(const type in messages) { %>
       <div class="<%= type %>">
         <h5><%= messages[type] %></h5>
