map functionality added and nav bars

--- a/views/events/new.ejs
+++ b/views/events/new.ejs
@@ -28,7 +28,7 @@
   </div>
 
   <div>
-    <label>Images</label>
+    <label>Add ink to image here</label>
     <input type="text" name="image" id="image">
   </div>
 
