--- a/views/events/show.ejs
+++ b/views/events/show.ejs
@@ -23,6 +23,9 @@
       <p><%= event.postcode %></p>
     </div>
 
+ <%# need to uncomment when googlemaps working%>
+    <%# <div id="map"></div>
+    <div id="text"></div>%>
 
     <div class="eventOwner">
       <p>Contact <%= event.createdBy %> for further information about this event.</p>
