--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,8 +2,28 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>PROJECT_NAME</title>
+    <style type="text/css">
+        #map
+        {
+          height:400px;
+          width:400px;
+          display:block;
+        }
+      </style>
+
+
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="/css/style.css">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBsjVRzalziT1_hryGpJ5LPKsOeAH3jcPg"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" charset="utf-8"></script>
+
+    <%# is this line req%>
+    <script type="text/javascript"></script>
+
+    <script src="/js/mapStyles.js" charset="utf-8"></script>
     <script src="/js/app.js" charset="utf-8"></script>
 
   </head>
@@ -22,6 +42,9 @@
       <ul>
         <li><a href="/login">Login</a></li>
         <p>login goes to views/session/new</p>
+        <li><a href="/register">Register</a></li>
+        <p>login goes to views/session/new</p>
+        
         <li><a href="/user">Profile</a></li>
         <p>login goes to views/session/new</p>
 
