--- a/views/statics/index.ejs
+++ b/views/statics/index.ejs
@@ -1,9 +1,6 @@
+<br>
+<br>
+
 <h1>Chicken Coop</h1>
 
-<% if (locals.isAuthenticated) { %>
-  <div id="map" data-postcode="<%= user.postcode %>"></div>
-<% } else { %>
-  <div class="home">
-    <h1><a href="/login">Log in</a> to view details for your hen weekend</h1>
-  </div>
-<% } %>
+<img src="http://i.giphy.com/l3vRba5cZpOUM1cfS.gif">
