--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,63 +3,39 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <% include ./partials/_stylesheets %>
+
     <title>PROJECT_NAME</title>
-    <style type="text/css">
-        #map
-        {
-          height:400px;
-          width:400px;
-          display:block;
-        }
-      </style>
 
+    <%#<style type="text/css">
+    #map
+    {
+      height:400px;
+      width:400px;
+      display:block;
+    }
+  </style>%>
 
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBsjVRzalziT1_hryGpJ5LPKsOeAH3jcPg"></script>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" charset="utf-8"></script>
-
-    <%# is this line req%>
-    <script type="text/javascript"></script>
-
-    <script src="/js/mapStyles.js" charset="utf-8"></script>
-    <script src="/js/app.js" charset="utf-8"></script>
-
+    <% include ./partials/_scripts %>
   </head>
+
   <body>
+    <header>
+      <div id="fb-root"></div>
+      <%- include ./partials/_navbar %>
+      <% for(const type in messages) { %>
+        <div class="<%= type %>">
+          <h5><%= messages[type] %></h5>
+        </div>
+      <% } %>
+    </header>
     <%# facebook login - instructed to add to each page required%>
-    <div id="fb-root"></div>
-    <script>(function(d, s, id) {
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) return;
-     js = d.createElement(s); js.id = id;
-     js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8&appId=616487815227069";
-     fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
-
-    <nav>
-      <ul>
-        <li><a href="/login">Login</a></li>
-        <p>login goes to views/session/new</p>
-        <li><a href="/register">Register</a></li>
-        <p>login goes to views/session/new</p>
-        
-        <li><a href="/user">Profile</a></li>
-        <p>login goes to views/session/new</p>
-
-        <li><a href="/events/new">add new event</a></li>
-        <p>  goes to events/new</p>
-
-      </ul>
-    </nav>
-    <% for(const type in messages) { %>
-      <div class="<%= type %>">
-        <h5><%= messages[type] %></h5>
-      </div>
-    <% } %>
     <main>
       <%- body %>
     </main>
+    <footer>
+      <p>&copy; beknow'in 2017</p>
+    </footer>
+
   </body>
 </html>
