--- a/views/statics/404.ejs
+++ b/views/statics/404.ejs
@@ -1,1 +1,6 @@
-<h1>404: Not Found</h1>
+<main>
+  <section id="chook">
+    <h1>404 - Not Found</h1>
+    <p>click on a link above...</p>
+  </section>
+</main>
