--- a/views/registrations/new.ejs
+++ b/views/registrations/new.ejs
@@ -1,4 +1,15 @@
+<br>
+<br>
+<br>
 <form method="POST" action="/register">
+  <div>
+    <label for="firstName">First Name</label>
+    <input type="text" name="firstName" id="firstName">
+  </div>
+  <div>
+    <label for="lastName">Last Name</label>
+    <input type="text" name="lastName" id="lastName">
+  </div>
   <div>
     <label for="username">Username</label>
     <input type="text" name="username" id="username">
@@ -14,6 +25,10 @@
   <div>
     <label for="passwordConfirmation">Password Confirmation</label>
     <input type="password" name="passwordConfirmation" id="passwordConfirmation">
+  </div>
+  <div>
+    <label for="profileImage">add a profile pic</label>
+    <input type="text" name="profileImage" id="profileImage">
   </div>
 
   <button>Register</button>
