--- a/views/events/index.ejs
+++ b/views/events/index.ejs
@@ -1,14 +1,19 @@
 <h2><% events.henName %> Hen do</h2>
 
 <% events.forEach((event) => { %>
-  <div>
-    <a href="/events/<%= event.id %>">
-      <img src="<%= event.image %>" alt="<%= event.title %>"></a>
-      <h2><%= event.activity %></h2>
-      <p><%= event.date %></p>
-      <p><%= event.time %></p>
-    </a>
+  <div class="row">
+    <div class="col-sm-4">
+      <section id="eventIndex">
+        <a href="/events/<%= event.id %>"></a>
+        <img src="<%= event.image %>" alt="<%= event.title %>">
+        <h3><%= event.activity %></h3>
+        <p><%= event.date %></p>
+        <p><%= event.time %></p>
+      <section>
+    </div>
   </div>
+
+
 
   <% if (locals.isAuthenticated) { %>
     <form method="POST" action="/events/<%= event.id %>">
