FB login and S3 upload complete

--- a/views/events/index.ejs
+++ b/views/events/index.ejs
@@ -9,7 +9,7 @@
         <h3><%= event.activity %></h3>
         <p><%= event.date %></p>
         <p><%= event.time %></p>
-      <section>
+      </section>
     </div>
   </div>
 
