--- a/views/registrations/new.ejs
+++ b/views/registrations/new.ejs
@@ -1,7 +1,7 @@
 <br>
 <br>
 <br>
-<form method="POST" action="/register">
+<form method="POST" action="/register" enctype="multipart/form-data">
   <div>
     <label for="firstName">First Name</label>
     <input type="text" name="firstName" id="firstName">
@@ -28,7 +28,7 @@
   </div>
   <div>
     <label for="profileImage">add a profile pic</label>
-    <input type="text" name="profileImage" id="profileImage">
+    <input type="file" name="profileImage" id="profileImage">
   </div>
 
   <button>Register</button>
