--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -7,9 +7,9 @@
   <div class="row">
     <div class="col-sm-4">
       <section id="userIndex">
-        <a href="/users/<%= user.id %>"></a>
-        <img src="<%= user.profileImage %>" alt="<%= user.lastName %>">
-      <section>
+        <img src="<%= user.profileImageSRC %>" alt="<%= user.firstName %>">
+        <a href="/users/<%= user.id %>"><%= user.username %></a>
+      </section>
     </div>
   </div>
 
