--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -7,7 +7,7 @@
   <div class="row">
     <div class="col-sm-4">
       <section id="userIndex">
-        <img src="<%= user.profileImageSRC %>" alt="<%= user.firstName %>">
+        <img class="img-fluid" src="<%= user.profileImageSRC %>" alt="<%= user.firstName %>">
         <a href="/users/<%= user.id %>"><%= user.username %></a>
       </section>
     </div>
