map function working, new registration form bug fixed

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -6,6 +6,8 @@ $brand-color: #c39797;
 
 body {
   font-family: 'Inconsolata', sans-serif;
+  padding-bottom: 50px;
+
 }
 
 * {
@@ -209,6 +211,12 @@ section {
   display:block;
 }
 
+#profilePicture {
+  height:250px;
+  width:250px;
+  padding: 20px;
+}
+
 #menus {
   a {
     text-transform: uppercase;
@@ -245,12 +253,18 @@ section {
 //     }
 //   }
 // }
-//
-// #map {
-// height: 300px;
-// background-color: grey;
-// }
-//
+
+#map {
+height: 300px;
+background-color: grey;
+}
+
+.infowindow {
+  font-family: 'Inconsolata', monospace;
+  color: $blue;
+}
+
+
 footer {
   background-color: rgba(20, 20, 20, 1);
   padding: 10px 0;
