--- a/views/events/index.ejs
+++ b/views/events/index.ejs
@@ -8,6 +8,8 @@
         <p><a href="/events/<%= event.id %>"><%= event.activity %></a></p>
         <p><%= event.date %></p>
         <p><%= event.time %></p>
+        <p><%= event.lat %></p>
+        <p><%= event.lng %></p>
 
 
       </section>
