--- a/views/events/new.ejs
+++ b/views/events/new.ejs
@@ -44,7 +44,10 @@
 
   <div>
     <label for="postcode">Postcode</label>
-    <input type="text" name="postcode" id="postcode">
+    <input class="autocomplete" type="text" name="postcode" id="postcode">
+    <input type="hidden" name="lat">
+    <input type="hidden" name="lng">
+
   </div>
 
 <%# can I auto add the username?%>
