--- a/views/partials/_scripts.ejs
+++ b/views/partials/_scripts.ejs
@@ -1,18 +1,6 @@
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBsjVRzalziT1_hryGpJ5LPKsOeAH3jcPg"></script>
+<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBsjVRzalziT1_hryGpJ5LPKsOeAH3jcPg"></script>-->
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
 
-<%# <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>%>
-
-<%# <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>%>
-
-<%# <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>%>
-<%# <script src="/js/app.js" charset="utf-8"></script>%>
-<%# <script>
- $('.select2').select2();
-</script>%>
-
-
-<%# <script type="text/javascript"></script>%>
-
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDc7hNgWybvVmyFoxffU6oAKwOBif-cJIo&libraries=places"></script>
 <script src="/js/mapStyles.js" charset="utf-8"></script>
 <script src="/js/app.js" charset="utf-8"></script>
