--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -15,6 +15,6 @@
   <br>
   <br>
 
-  <div class="row">
+  <div id="profilePicture">
     <img class="img-fluid" src="<%= user.profileImageSRC %>" alt="<%= user.firstName %>">
   </div>
