--- a/views/registrations/new.ejs
+++ b/views/registrations/new.ejs
@@ -1,35 +1,65 @@
-<br>
-<br>
-<br>
-<form method="POST" action="/register" enctype="multipart/form-data">
-  <div>
-    <label for="firstName">First Name</label>
-    <input type="text" name="firstName" id="firstName">
-  </div>
-  <div>
-    <label for="lastName">Last Name</label>
-    <input type="text" name="lastName" id="lastName">
-  </div>
-  <div>
-    <label for="username">Username</label>
-    <input type="text" name="username" id="username">
-  </div>
-  <div>
-    <label for="email">Email</label>
-    <input type="email" name="email" id="email">
-  </div>
-  <div>
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password">
-  </div>
-  <div>
-    <label for="passwordConfirmation">Password Confirmation</label>
-    <input type="password" name="passwordConfirmation" id="passwordConfirmation">
-  </div>
-  <div>
-    <label for="profileImage">add a profile pic</label>
-    <input type="file" name="profileImage" id="profileImage">
-  </div>
+<h1>Register</h1>
+<div class="container">
+  <form method="POST" action="/register" enctype="multipart/form-data" class="form-horizontal">
 
-  <button>Register</button>
-</form>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="firstName"></label>
+      <div class="col-sm-offset-2 col-sm-10">
+        <input type="text" class="form-control" name="firstName" id="firstName" placeholder="First name">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="lastName"></label>
+      <div class="col-sm-offset-2 col-sm-10">
+        <input type="text" class="form-control" name="lastName" id="lastName" placeholder="Surname">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="username"></label>
+      <div class="col-sm-offset-2 col-sm-10">
+        <input type="text" class="form-control" name="username" id="username" placeholder="Create a user name">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="email"></label>
+      <div class="col-sm-10">
+        <input type="email" class="form-control" name="email" id="email" placeholder=" Email address">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="password"></label>
+      <div class="col-sm-10">
+        <input type="password" name="password" class="form-control" id="password" placeholder="Enter password">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="passwordConfirmation"></label>
+      <div class="col-sm-10">
+        <input type="password" name="passwordConfirmation" class="form-control" id="passwordConfirmation" placeholder="Re-enter password">
+      </div>
+    </div>
+    <div>
+      <label class="control-label col-sm-2" for="profileImage">Add a pic</label>
+      <div class="col-sm-10">
+        <input type="file" name="profileImage" id="profileImage">
+      </div>
+    </div>
+
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="knowHen"></label>
+      <textarea name="knowHen" id="knowHen" placeholder="How do you know the hen?" class="form-control"></textarea>
+    </div>
+
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="funnyStory"></label>
+      <textarea name="funnyStory" id="funnyStory" placeholder="Got a funny story about her?" class="form-control"></textarea>
+    </div>
+
+    <button type="submit" class="btn btn-default">Register</button>
+  </form>
+</div>
