--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,28 +1,16 @@
-<%# // REDO THIS PAGE FOR users%>
+<div class="container-fluid ">
+  <div class="indexStyle">
+    <div class="page-header">
+      <h1>Welcome Hens...  get to know eachother here.<small><br><br>Click on a user to find out how they know the hen and read a funny story about her.</small></h1>
+    </div>
 
-
-<h2><% users.henName %> Hen do</h2>
-
-<% users.forEach((user) => { %>
-  <div class="row">
-    <div class="col-sm-4">
-      <section id="userIndex">
-        <img class="img-fluid" src="<%= user.profileImageSRC %>" alt="<%= user.firstName %>">
-        <a href="/users/<%= user.id %>"><%= user.username %></a>
-      </section>
+    <div class="row">
+      <% users.forEach((user) => { %>
+        <div class="col-sm-4" id="userIndex">
+          <img class="img-fluid" src="<%= user.profileImageSRC %>" alt="<%= user.firstName %>">
+          <h3><a href="/users/<%= user.id %>"><%= user.username %></a></h3>
+        </div>
+      <% }) %>
     </div>
   </div>
-
-
-
-  <% if (locals.isAuthenticated) { %>
-    <form method="POST" action="/users/<%= user.id %>">
-      <input type="hidden" name="_method" value="DELETE">
-      <button>Delete</button>
-    </form>
-  <% } %>
-
-<% }) %>
-<br>
-<br>
-<br>
+</div>
