--- a/views/events/edit.ejs
+++ b/views/events/edit.ejs
@@ -1,4 +1,4 @@
-<h1>Edit Event</h1>
+<h1>Edit your event</h1>
 <div container=form>
 <form method="POST" action="/events/<%= event.id %>">
 <input type="hidden" name="_method" value="PUT">
@@ -29,34 +29,27 @@
   </div>
 
   <div>
-    <label>Images</label>
+    <label>Add url for image here</label>
     <input type="text" name="image" id="image" value="<%= event.image %>">
   </div>
 
   <div>
-    <label for="address1">Rating</label>
+    <label for="address1">Street Address</label>
     <input type="text" name="address1" id="address1" value="<%= event.address1 %>">
   </div>
 
   <div>
-    <label for="address2">Rating</label>
+    <label for="address2">City</label>
     <input type="text" name="address2" id="address2" value="<%= event.address2 %>">
   </div>
 
   <div>
-    <label for="postcode">Rating</label>
-    <input type="text" name="postcode" id="postcode" value="<%= event.postcode %>">
+    <label for="postcode">Postcode</label>
+    <input class="autocomplete" type="text" name="postcode" id="postcode">
+    <input type="hidden" name="lat">
+    <input type="hidden" name="lng">
   </div>
 
-
-<%# can I make this a field which just displays the users name as only the user can make the edit?%>
-  <div>
-    <label for="createdBy">Created by</label>
-    <input type="placeholder" name="createdBy" id="createdBy" value="<%= user.username %>">
-  </div>
-
-  <button class="btn btn-primary">Add</button>
+  <button class="btn btn-primary">Edit</button>
 
 </form>
-</div>
-</main>
