--- a/views/events/index.ejs
+++ b/views/events/index.ejs
@@ -1,28 +1,23 @@
-<h2><% events.henName %> Hen do</h2>
-
-<% events.forEach((event) => { %>
-  <div class="row">
-    <div class="col-sm-4">
-      <section id="eventIndex">
-        <img class="img-fluid" src="<%= event.image %>" alt="<%= event.title %>"
-        <p><a href="/events/<%= event.id %>"><%= event.activity %></a></p>
-        <p><%= event.date %></p>
-        <p><%= event.time %></p>
-        <p><%= event.lat %></p>
-        <p><%= event.lng %></p>
-
-
-      </section>
-    </div>
-  </div>
-
-
-
-  <% if (locals.isAuthenticated) { %>
+<div class="container-fluid">
+  <% if (locals.isAuthenticated && locals.createdBy) { %>
     <form method="POST" action="/events/<%= event.id %>">
-      <input type="hidden" name="_method" value="DELETE">
-      <button>Delete</button>
+    <input type="hidden" name="_method" value="DELETE">
+    <button>Delete</button>
     </form>
   <% } %>
 
-<% }) %>
+  <div class="indexStyle">
+    <div class="page-header">
+      <h1>The weekend is here...</h1>
+    </div>
+  </div>
+
+  <div class="row">
+    <% events.forEach((event) => { %>
+      <div class="col-sm-4" 
+      <h2>date:<%= event.date %></h2>
+      <h3><a href="/events/<%= event.id %>"><%= event.activity %></a></h3>
+      <img class="img-fluid" src="<%= event.image %>" alt="<%= event.activity %>">
+      </div>
+    <% }) %>
+  </div>
