--- a/views/statics/index.ejs
+++ b/views/statics/index.ejs
@@ -1,7 +1,5 @@
-<br>
-<br>
-
 <h1>Chicken Coop</h1>
 <div class="home">
+  <p>The place to organise your hens, on your hen weekend</p>
 
 <img src="http://i.giphy.com/l3vRba5cZpOUM1cfS.gif">
