--- a/views/events/show.ejs
+++ b/views/events/show.ejs
@@ -2,45 +2,54 @@
   <% if (locals.isAuthenticated && locals.createdBy) { %>
     <form method="POST" action="/events/<%= event.id %>">
       <input type="hidden" name="_method" value="DELETE">
-      <button>Delete</button>
+      <input type="submit" class="btn btn-info" value="Submit Button">
     </form>
   <% } %>
 
-  <main>
   <div class="page-header">
-    <h1>So pleased you can join us <%= user.firstName %><br><small><%= event.henName %> is going to love this... </small></h1>
+    <h1>So pleased you can join us<br><small><%= event.henName %> is going to love this... </small></h1>
   </div>
 
   <div class="row">
-  <div class="col-sm-8" id="image">
-    <img class="img-fluid" src="<%= event.image %>" alt="<%= event.activity %>">
-    <h2><%= event.activity %></h2>
-    <p><%= event.date %> at <%= event.time %></p>
-    <p>Things you need to know<%= event.comments %></p>
-    <p>Address<%= event.address1 %> <%= event.address2 %> <%= event.postcode %></p>
-    <div id="map" data-lat="<%= event.lat %>" data-lng="<%= event.lng %>"></div>
-  </div>
+    <div class="col-sm-8" id="image">
+      <img class="img-fluid" src="<%= event.image %>" alt="<%= event.activity %>">
+      <h2><%= event.activity %></h2>
+      <p><%= event.date %> at <%= event.time %></p>
+      <p>Things you need to know:  <%= event.description %></p>
+      <p>Address: <%= event.address1 %> <%= event.address2 %> <%= event.postcode %></p>
+      <div id="map" data-lat="<%= event.lat %>" data-lng="<%= event.lng %>"></div>
+    </div>
 
-  <div class="row">
     <div class="col-sm-4" id="aside">
       <p>What's cluck-a-lacking...?</p>
-      <% event.comments.forEach((comment) => { %>
-      <p><%= comment.content %></p>
-      <small><%= comment.createdBy.username %></small>
+
       <% if(locals.isAuthenticated) { %>
-        <section>
           <h4>Add a comment</h4>
           <form method="POST" action="/events/<%= event.id %>/comments">
             <textarea name="content" id="content" placeholder="Add comment"></textarea>
-            <button class="button">Cluck to Add</button>
+            <button class="Submit">Cluck to Add</button>
           </form>
-        </section>
       <% } %>
 
-      <% if(locals.isAuthenticated && comment.ownedBy(user)) { %>
-        <form method="POST" action="/events/<%= event.id %>/comments/<%=comment.id %>">
-          <input type="hidden" name="_method" value="DELETE">
-          <button>Delete</button>
-        </form>
+      <% event.comments.forEach((comment) => { %>
+
+//THIS LINE IS THROWING PROBLEMS********************************
+        <p><%= comments.content %></p>
+
+        <small><%= comments.createdBy.username %></small>
+
+        <% if(locals.isAuthenticated && comment.ownedBy(user)) { %>
+          <form method="POST" action="/events/<%= event.id %>/comments/<%=comment.id %>">
+            <input type="hidden" name="_method" value="DELETE">
+            <button>Delete</button>
+          </form>
+
+          <form method="POST" action="/events/<%= event.id %>">
+            <input type="hidden" name="_method" value="EDIT">
+            <button>Edit</button>
+          </form>
         <% } %>
       <% }) %>
+    </div>
+  </div>
+</div>
