--- a/views/events/new.ejs
+++ b/views/events/new.ejs
@@ -21,8 +21,8 @@
   </div>
 
   <div>
-    <label for="comment">Description</label>
-    <input type="text" name="comment" id="comment">
+    <label for="description">Description</label>
+    <input type="text" name="description" id="description">
   </div>
 
   <div>
