--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -48,6 +48,6 @@
     <input type="text" name="funnyStory" id="funnyStory" value="<%= user.funnyStory %>">
   </div>
 
-  <button class="btn btn-primary">Edit</button>
+  <input class="btn btn-default" type="submit" value="Submit">
 
 </form>
