--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -1,25 +1,26 @@
 <div class="container-fluid">
-  <% if (locals.isAuthenticated && locals.createdBy) { %>
-    <form method="POST" action="/users/<%= user.id %>">
+  <% if (locals.isAuthenticated && (showUser.id === user.id)) { %>
+    <form method="POST" action="/users/<%= showUser.id %>">
     <input type="hidden" name="_method" value="DELETE">
     <button>Delete</button>
     </form>
+    <a href="/users/<%= showUser.id %>/edit">Edit</a>
   <% } %>
 
   <div class="page-header">
-    <h1>Meet <%= user.firstName %> <%= user.lastName %><br><small> aka <%= user.username %></small></h1>
+    <h1>Meet <%= showUser.firstName %> <%= showUser.lastName %><br><small> aka <%= showUser.username %></small></h1>
   </div>
 
   <div class="row">
     <div class="col-sm-6" id="profilePicture">
-      <img class="img-fluid" src="<%= user.profileImageSRC %>" alt="<%= user.firstName %>">
+      <img class="img-fluid" src="<%= showUser.profileImageSRC %>" alt="<%= showUser.firstName %>">
     </div>
     <div class="col-sm-6">
       <p>Here's how I know the lucky hen:</p>
-      <p><%= user.knowHen %></p>
+      <p><%= showUser.knowHen %></p>
       <br><br>
       <p>And here's an embarrassing story for you:</p>
-      <p><%= user.funnyStory %></p>
+      <p><%= showUser.funnyStory %></p>
     </div>
   </div>
 </div>
